--- a/home.html
+++ b/home.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
-<html class="light" lang="vi"><head>
+<html class="light" lang="vi"><head></head><body class="min-h-screen flex flex-col overflow-hidden">```html
+
+
+
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>RentalERP AI - Visual Explorer (Teal Edition)</title>
@@ -41,10 +43,10 @@
             height: calc(100vh - 80px - 64px);
         }
         .glass-panel {
-            background: rgba(13, 92, 84, 0.65);
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
-            border: 1px solid rgba(17, 181, 164, 0.2);
+            background: rgba(8, 55, 51, 0.98);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border: 1px solid rgba(17, 181, 164, 0.5);
         }
         .card-gradient {
             background: linear-gradient(to top, rgba(13, 92, 84, 0.95) 0%, rgba(13, 92, 84, 0.4) 40%, transparent 100%);
@@ -56,40 +58,63 @@
             @apply px-8 py-3 rounded-[4px] font-bold text-sm transition-all duration-200 bg-white border border-[#0D5C54]/20 text-[#0D5C54] hover:bg-gray-50 active:scale-[0.98] uppercase tracking-wider;
         }
         .btn-outline-teal {
-            @apply px-6 py-2 rounded-[4px] font-bold text-[11px] transition-all duration-200 border border-[#11B5A4]/40 text-white hover:bg-[#11B5A4] hover:border-[#11B5A4] uppercase tracking-widest;
+            @apply px-6 py-2 rounded-[4px] font-bold text-[11px] transition-all duration-200 border border-[#11B5A4]/40 text-white hover:bg-[#11B5A4] hover:border-[#11B5A4] uppercase tracking-widest bg-transparent;
         }
         .material-symbols-outlined {
+            font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+        }
+        .teal-icon {
+            @apply text-[#11B5A4];
             font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 24;
         }
         .active-nav {
-            @apply text-[#0D5C54] border-b-2 border-[#11B5A4] pb-1;
+            @apply text-[#11B5A4] border-b-2 border-[#11B5A4] pb-1;
+        }
+        .slider-nav-btn {
+            @apply w-12 h-12 rounded-full flex items-center justify-center bg-black/20 hover:bg-[#11B5A4]/80 text-white transition-all duration-300 backdrop-blur-sm border border-white/10;
+        }
+        .dot {
+            @apply w-2 h-2 rounded-full bg-white/30 transition-all duration-300;
+        }
+        .dot.active {
+            @apply w-8 bg-[#11B5A4];
         }
     </style>
-</head>
-<body class="min-h-screen flex flex-col overflow-hidden">
+
+
 <header class="h-20 shrink-0 z-50 bg-white border-b border-gray-100 flex items-center">
 <div class="w-full px-10 flex items-center justify-between">
 <div class="flex items-center gap-16">
 <div class="flex items-center gap-2.5">
 <div class="text-[#11B5A4]">
-<span class="material-symbols-outlined text-3xl leading-none">account_tree</span>
+<span class="material-symbols-outlined teal-icon text-3xl leading-none">account_tree</span>
 </div>
 <span class="text-[#0D5C54] text-xl font-black tracking-tighter uppercase">RentalERP<span class="text-[#11B5A4]">AI</span></span>
 </div>
 <nav class="hidden lg:flex items-center gap-10">
 <a class="active-nav text-sm font-bold" href="#">Trang chủ</a>
 <a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="#">Dự án</a>
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="#">Danh mục</a>
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="#">Vận hành</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="#">Đặt phòng</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="#">Dịch vụ</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="#">Liên hệ</a>
 </nav>
 </div>
 <div class="flex items-center gap-4">
 <button class="btn-secondary">Đăng nhập</button>
-<button class="btn-primary">Bắt đầu ngay</button>
 </div>
 </div>
 </header>
-<main class="experience-grid flex-1 relative overflow-hidden">
+<main class="experience-grid flex-1 relative overflow-hidden group/main">
+<div class="absolute inset-y-0 left-6 flex items-center z-30 pointer-events-none">
+<button class="slider-nav-btn pointer-events-auto group-hover/main:translate-x-0 -translate-x-20 transition-transform">
+<span class="material-symbols-outlined">chevron_left</span>
+</button>
+</div>
+<div class="absolute inset-y-0 right-6 flex items-center z-30 pointer-events-none">
+<button class="slider-nav-btn pointer-events-auto group-hover/main:translate-x-0 translate-x-20 transition-transform">
+<span class="material-symbols-outlined">chevron_right</span>
+</button>
+</div>
 <div class="absolute inset-0 flex flex-col md:flex-row">
 <div class="group relative flex-1 overflow-hidden border-r border-white/5 cursor-pointer">
 <img alt="Căn hộ Studio" class="absolute inset-0 w-full h-full object-cover transition-transform duration-1000 group-hover:scale-110" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBniWPKi7orTC6d33yKCiJ0O297vwimHlLQlvNf2Sp6r7MhsEtO_EkFadJc4vrmXMrGZz6fJdKXEusFHy3sSzl9xRFFxriNJObN6EfkiusT1dPG8uB0UPskqDOQoaavJaW8OZHesMCDi_Aa1_QJh2JLhgKu84UWBWmao1DsK8x_6m0SGL6Fs_ElEPSa0ZLu2dEBWuus84VJw-flNQ-w4W1zgxcCcgWJFaqL3warXFLBxpyuLD0MjpFk_aFhozL_FVAGifRahMPPuXc"/>
@@ -102,13 +127,13 @@
 <h2 class="text-white text-3xl font-bold leading-tight mb-2">Tối giản &amp; Hiện đại</h2>
 <p class="text-white/70 text-sm font-medium mb-6 opacity-0 group-hover:opacity-100 transition-opacity duration-500 max-w-xs">Giải pháp không gian sống linh hoạt cho giới trẻ tại khu vực trung tâm.</p>
 <div class="flex items-center gap-3 text-white/60 text-xs font-semibold">
-<span class="material-symbols-outlined text-[#11B5A4] text-lg">location_on</span>
+<span class="material-symbols-outlined teal-icon text-lg">location_on</span>
 <span>Quận 1, Bình Thạnh</span>
 </div>
 </div>
 </div>
 <div class="absolute top-10 right-10 opacity-0 group-hover:opacity-100 transition-all duration-300 translate-x-4 group-hover:translate-x-0">
-<span class="material-symbols-outlined text-[#11B5A4] text-3xl">arrow_outward</span>
+<span class="material-symbols-outlined teal-icon text-3xl">arrow_outward</span>
 </div>
 </div>
 <div class="group relative flex-1 overflow-hidden border-r border-white/5 cursor-pointer">
@@ -122,13 +147,13 @@
 <h2 class="text-white text-3xl font-bold leading-tight mb-2">Gia đình Tiện nghi</h2>
 <p class="text-white/70 text-sm font-medium mb-6 opacity-0 group-hover:opacity-100 transition-opacity duration-500 max-w-xs">Trải nghiệm sống cộng đồng văn minh với đầy đủ tiện ích cao cấp.</p>
 <div class="flex items-center gap-3 text-white/60 text-xs font-semibold">
-<span class="material-symbols-outlined text-[#11B5A4] text-lg">location_on</span>
+<span class="material-symbols-outlined teal-icon text-lg">location_on</span>
 <span>Quận 7, TP. Thủ Đức</span>
 </div>
 </div>
 </div>
 <div class="absolute top-10 right-10 opacity-0 group-hover:opacity-100 transition-all duration-300 translate-x-4 group-hover:translate-x-0">
-<span class="material-symbols-outlined text-[#11B5A4] text-3xl">arrow_outward</span>
+<span class="material-symbols-outlined teal-icon text-3xl">arrow_outward</span>
 </div>
 </div>
 <div class="group relative flex-1 overflow-hidden border-r border-white/5 cursor-pointer">
@@ -142,13 +167,13 @@
 <h2 class="text-white text-3xl font-bold leading-tight mb-2">Không gian Riêng tư</h2>
 <p class="text-white/70 text-sm font-medium mb-6 opacity-0 group-hover:opacity-100 transition-opacity duration-500 max-w-xs">Phân khúc cao cấp dành cho những chủ nhân tìm kiếm sự tĩnh lặng và biệt lập.</p>
 <div class="flex items-center gap-3 text-white/60 text-xs font-semibold">
-<span class="material-symbols-outlined text-[#11B5A4] text-lg">location_on</span>
+<span class="material-symbols-outlined teal-icon text-lg">location_on</span>
 <span>Thảo Điền, Phú Mỹ Hưng</span>
 </div>
 </div>
 </div>
 <div class="absolute top-10 right-10 opacity-0 group-hover:opacity-100 transition-all duration-300 translate-x-4 group-hover:translate-x-0">
-<span class="material-symbols-outlined text-[#11B5A4] text-3xl">arrow_outward</span>
+<span class="material-symbols-outlined teal-icon text-3xl">arrow_outward</span>
 </div>
 </div>
 <div class="group relative flex-[0.7] overflow-hidden bg-[#0D5C54] cursor-pointer">
@@ -157,7 +182,7 @@
 </div>
 <div class="absolute inset-0 flex flex-col justify-center items-center text-center p-10">
 <div class="w-16 h-16 rounded-xl bg-[#11B5A4]/10 flex items-center justify-center mb-6 group-hover:bg-[#11B5A4]/20 transition-colors">
-<span class="material-symbols-outlined text-[#11B5A4] text-4xl">security</span>
+<span class="material-symbols-outlined teal-icon text-4xl">shield</span>
 </div>
 <h3 class="text-white text-xl font-bold mb-3">Hệ thống Quản lý</h3>
 <p class="text-white/60 text-xs font-medium leading-relaxed max-w-[180px] mb-8">Nền tảng vận hành BĐS ứng dụng AI chuyên nghiệp nhất.</p>
@@ -165,16 +190,23 @@
 </div>
 </div>
 </div>
-<div class="absolute bottom-12 left-1/2 -translate-x-1/2 z-20 pointer-events-auto">
-<div class="glass-panel px-8 py-4 rounded-full flex items-center gap-8 shadow-[0_20px_50px_rgba(13,92,84,0.3)]">
-<div class="flex items-center gap-3">
-<div class="w-2.5 h-2.5 rounded-full bg-[#11B5A4] shadow-[0_0_12px_rgba(17,181,164,0.8)]"></div>
-<span class="text-white text-sm font-semibold tracking-wide">Khám phá BĐS theo cách của bạn</span>
+<div class="absolute bottom-24 left-1/2 -translate-x-1/2 z-20 flex items-center gap-3">
+<span class="dot active"></span>
+<span class="dot"></span>
+<span class="dot"></span>
+<span class="dot"></span>
+<span class="dot"></span>
+</div>
+<div class="absolute bottom-12 left-1/2 -translate-x-1/2 z-20 w-full max-w-2xl px-6">
+<div class="glass-panel px-6 py-3 rounded-full flex items-center gap-4 shadow-[0_25px_60px_rgba(8,55,51,0.7)] border-white/20">
+<div class="flex-1 flex items-center gap-3">
+<div class="w-2.5 h-2.5 rounded-full bg-[#11B5A4] shadow-[0_0_12px_rgba(17,181,164,0.8)] shrink-0"></div>
+<input class="bg-transparent border-none text-white text-sm font-semibold tracking-wide w-full focus:ring-0 placeholder:text-white/40 py-0" placeholder="Khám phá BĐS theo cách của bạn..." type="text"/>
 </div>
 <div class="h-6 w-[1px] bg-white/20"></div>
-<div class="flex items-center gap-6">
-<span class="material-symbols-outlined text-white/60 text-xl cursor-help hover:text-[#11B5A4] transition-colors">mouse</span>
-<span class="material-symbols-outlined text-white/60 text-xl cursor-help hover:text-[#11B5A4] transition-colors">tune</span>
+<div class="flex items-center gap-4 shrink-0">
+<button class="material-symbols-outlined text-white/60 text-xl hover:text-[#11B5A4] transition-colors teal-icon">send</button>
+<span class="material-symbols-outlined text-white/60 text-xl cursor-pointer hover:text-[#11B5A4] transition-colors teal-icon">tune</span>
 </div>
 </div>
 </div>
@@ -204,4 +236,4 @@
 </div>
 </footer>
 
-</body></html>
+```</body></html>
