--- a/home.html
+++ b/home.html
@@ -100,32 +100,19 @@
 </nav>
 </div>
 <div class="flex items-center gap-4">
+<a class="hidden xl:flex items-center gap-3 bg-[#FF4D4F] text-white pl-4 pr-5 py-2 rounded-[12px] shadow-lg shadow-red-500/20 hover:bg-[#FF2629] hover:shadow-red-500/40 transition-all duration-300 transform hover:-translate-y-0.5 border border-red-400/50 cursor-pointer" href="#">
+<div class="w-8 h-8 rounded-full bg-white/20 flex items-center justify-center backdrop-blur-sm">
+<span class="material-symbols-outlined text-lg">local_activity</span>
+</div>
+<div class="flex flex-col leading-none">
+<span class="text-[9px] font-bold uppercase tracking-wider text-white/90 mb-0.5">Ưu đãi hè rực rỡ</span>
+<span class="text-xs font-bold text-white">Nhận ngay voucher 500k</span>
+</div>
+</a>
 <button class="btn-secondary">Đăng nhập</button>
 </div>
 </div>
 </header>
-<div class="w-full px-6 pt-4 pb-2 shrink-0 z-40 bg-[#F8FAFC]">
-<div class="relative w-full rounded-[14px] overflow-hidden flex items-center justify-between px-6 py-3 border border-[#11B5A4]/30 shadow-sm group-banner bg-white">
-<div class="absolute inset-0 bg-gradient-to-r from-[#11B5A4]/10 via-[#F0FDFA] to-[#11B5A4]/10 opacity-80 backdrop-blur-sm"></div>
-<div class="relative flex items-center gap-3">
-<div class="w-8 h-8 rounded-full bg-[#11B5A4]/10 flex items-center justify-center shrink-0 border border-[#11B5A4]/20">
-<span class="material-symbols-outlined teal-icon text-lg text-[#11B5A4]">campaign</span>
-</div>
-<p class="text-[#0D5C54] text-sm font-medium tracking-tight">
-<span class="font-bold">Chào hè rực rỡ</span> — Nhận ngay voucher dịch vụ <span class="text-[#11B5A4] font-bold">500k</span> khi đặt phòng Villa
-                </p>
-</div>
-<div class="relative flex items-center gap-4">
-<div class="hidden md:flex items-center gap-2 text-[#0D5C54]/80 text-xs font-semibold bg-white/60 px-3 py-1.5 rounded-lg border border-[#0D5C54]/5 shadow-sm">
-<span class="material-symbols-outlined text-base">timer</span>
-<span>Hạn chót: 31/08</span>
-</div>
-<button class="bg-[#0D5C54] hover:bg-[#11B5A4] text-white text-xs font-bold py-2.5 px-6 rounded-[14px] uppercase tracking-wider transition-all duration-300 shadow-lg shadow-[#0D5C54]/20 active:scale-[0.98] flex items-center gap-2">
-<span>Nhận ưu đãi</span>
-</button>
-</div>
-</div>
-</div>
 <section class="relative w-full h-[85vh] min-h-[600px] overflow-hidden group/main shrink-0">
 <div class="absolute inset-y-0 left-6 flex items-center z-30 pointer-events-none">
 <button class="slider-nav-btn pointer-events-auto group-hover/main:translate-x-0 -translate-x-20 transition-transform">
@@ -456,5 +443,4 @@
 </div>
 </div>
 </footer>
-
 </body></html>
