--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 <span class="text-[#0D5C54] text-xl font-black tracking-tighter uppercase">RentalERP<span class="text-[#11B5A4]">AI</span></span>
 </div>
 <nav class="hidden lg:flex items-center gap-10">
-<a class="active-nav text-sm font-bold" href="#">Trang chủ</a>
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="#">Dự án</a>
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="#">Đặt phòng</a>
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="#">Dịch vụ</a>
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="#">Liên hệ</a>
+<a class="active-nav text-sm font-bold" href="/home">Trang chủ</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/bds">Dự án</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/booking">Đặt phòng</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/service">Dịch vụ</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/contact">Liên hệ</a>
 </nav>
 </div>
 <div class="flex items-center gap-4">
@@ -444,3 +444,4 @@
 </div>
 </footer>
 </body></html>
+
