--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </nav>
 </div>
 <div class="flex items-center gap-4">
-<a class="hidden xl:flex items-center gap-3 bg-[#FF4D4F] text-white pl-4 pr-5 py-2 rounded-[12px] shadow-lg shadow-red-500/20 hover:bg-[#FF2629] hover:shadow-red-500/40 transition-all duration-300 transform hover:-translate-y-0.5 border border-red-400/50 cursor-pointer" href="#">
+<a class="hidden xl:flex items-center gap-3 bg-[#FF4D4F] text-white pl-4 pr-5 py-2 rounded-[12px] shadow-lg shadow-red-500/20 hover:bg-[#FF2629] hover:shadow-red-500/40 transition-all duration-300 transform hover:-translate-y-0.5 border border-red-400/50 cursor-pointer" href="/login">
 <div class="w-8 h-8 rounded-full bg-white/20 flex items-center justify-center backdrop-blur-sm">
 <span class="material-symbols-outlined text-lg">local_activity</span>
 </div>
@@ -444,4 +444,5 @@
 </div>
 </footer>
 </body></html>
+
 
