--- a/login.html
+++ b/login.html
@@ -137,7 +137,7 @@
 <input class="w-5 h-5 rounded border-white/10 text-accent focus:ring-accent focus:ring-offset-0 bg-white/5 dark:bg-white/5" type="checkbox"/>
 <span class="text-sm text-gray-400 group-hover:text-gray-200 transition-colors select-none">Ghi nhớ đăng nhập</span>
 </label>
-<a class="text-sm font-medium text-accent hover:text-accent/80 transition-colors" href="#">Quên mật khẩu?</a>
+<a class="text-sm font-medium text-accent hover:text-accent/80 transition-colors" href="/home">Quên mật khẩu?</a>
 </div>
 <button class="flex w-full items-center justify-center rounded-xl bg-accent h-14 mt-2 px-4 text-primary text-lg font-bold hover:brightness-110 shadow-[0_0_20px_rgba(17,181,164,0.3)] active:scale-[0.98] transition-all">
                         Đăng nhập
