--- a/home.html
+++ b/home.html
@@ -92,15 +92,15 @@
 <span class="text-[#0D5C54] text-xl font-black tracking-tighter uppercase">RentalERP<span class="text-[#11B5A4]">AI</span></span>
 </div>
 <nav class="hidden lg:flex items-center gap-10">
-<a class="active-nav text-sm font-bold" href="/home">Trang chủ</a>
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/bds">Dự án</a>
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/booking">Đặt phòng</a>
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/service">Dịch vụ</a>
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/contact">Liên hệ</a>
+<a class="active-nav text-sm font-bold" href="/rentalerp/home">Trang chủ</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/rentalerp/bds">Dự án</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/rentalerp/booking">Đặt phòng</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/rentalerp/service">Dịch vụ</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/rentalerp/contact">Liên hệ</a>
 </nav>
 </div>
 <div class="flex items-center gap-4">
-<a class="hidden xl:flex items-center gap-3 bg-[#FF4D4F] text-white pl-4 pr-5 py-2 rounded-[12px] shadow-lg shadow-red-500/20 hover:bg-[#FF2629] hover:shadow-red-500/40 transition-all duration-300 transform hover:-translate-y-0.5 border border-red-400/50 cursor-pointer" href="/login">
+<a class="hidden xl:flex items-center gap-3 bg-[#FF4D4F] text-white pl-4 pr-5 py-2 rounded-[12px] shadow-lg shadow-red-500/20 hover:bg-[#FF2629] hover:shadow-red-500/40 transition-all duration-300 transform hover:-translate-y-0.5 border border-red-400/50 cursor-pointer" href="/rentalerp/login">
 <div class="w-8 h-8 rounded-full bg-white/20 flex items-center justify-center backdrop-blur-sm">
 <span class="material-symbols-outlined text-lg">local_activity</span>
 </div>
@@ -444,5 +444,6 @@
 </div>
 </footer>
 </body></html>
+
 
 
