--- a/bds.html
+++ b/bds.html
@@ -72,11 +72,11 @@
 <span class="text-[#0D5C54] text-xl font-black tracking-tighter uppercase">RentalERP<span class="text-[#11B5A4]">AI</span></span>
 </div>
 <nav class="hidden lg:flex items-center gap-10">
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/home">Trang chủ</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/rentalerp/home">Trang chủ</a>
 <a class="active-nav text-sm" href="/bds">Dự án</a>
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/booking">Đặt phòng</a>
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/service">Dịch vụ</a>
-<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/contact">Liên hệ</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/rentalerp/booking">Đặt phòng</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/rentalerp/service">Dịch vụ</a>
+<a class="text-[#0D5C54]/60 text-sm font-semibold hover:text-[#11B5A4] transition-colors" href="/rentalerp/contact">Liên hệ</a>
 </nav>
 </div>
 <div class="flex items-center gap-6">
@@ -359,3 +359,4 @@
 </footer>
 
 </body></html>
+
